using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class Animations
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yDirection = "yDirection";
}
